[gd_scene load_steps=13 format=2]

[ext_resource path="res://Nodes/Main/Main.gd" type="Script" id=1]
[ext_resource path="res://Nodes/Main/TitleScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://Nodes/Main/World.gd" type="Script" id=5]
[ext_resource path="res://Nodes/Main/CircleTransitionShader.tres" type="Shader" id=6]
[ext_resource path="res://Nodes/Main/Players.gd" type="Script" id=7]
[ext_resource path="res://Resources/Image/TempSplashScreen.png" type="Texture" id=8]
[ext_resource path="res://Nodes/GeneralMenus/GeneralMenus.tscn" type="PackedScene" id=9]
[ext_resource path="res://Nodes/Main/MenuViewportContainer.gd" type="Script" id=10]
[ext_resource path="res://Nodes/Pawn/Actor/Box/Box.tscn" type="PackedScene" id=11]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 6 )
shader_param/value = 1.0

[sub_resource type="Animation" id=2]
resource_name = "CircleTransition"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AddRemovePlayerTrans:material:shader_param/value")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AddRemovePlayerTrans:material:shader_param/value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[node name="Main" type="Node" groups=["Debug", "Game", "Settings"]]
script = ExtResource( 1 )
splash_image = ExtResource( 8 )

[node name="PreviewViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true

[node name="Viewport" type="Viewport" parent="PreviewViewportContainer"]
size = Vector2( 1280, 720 )
handle_input_locally = false
render_target_update_mode = 3

[node name="PreviewCamera" type="Camera" parent="PreviewViewportContainer/Viewport"]
transform = Transform( 0.955325, -0.0865214, 0.28261, 0, 0.956192, 0.292739, -0.295558, -0.279661, 0.913474, 7.19, 10.374, 23.668 )
visible = false
far = 1000.0

[node name="TitleScreen" parent="PreviewViewportContainer/Viewport" instance=ExtResource( 4 )]

[node name="Players" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddRemovePlayerTrans" type="ColorRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="World" type="Spatial" parent="."]
script = ExtResource( 5 )
box_res = ExtResource( 11 )

[node name="Lobbies" type="Spatial" parent="World"]

[node name="Places" type="Spatial" parent="World"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CircleTransition = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="MenuViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="MenuViewportContainer"]
size = Vector2( 1280, 720 )
transparent_bg = true
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3
shadow_atlas_quad_0 = 0
shadow_atlas_quad_1 = 0
shadow_atlas_quad_2 = 0
shadow_atlas_quad_3 = 0

[node name="GeneralMenus" parent="MenuViewportContainer/Viewport" instance=ExtResource( 9 )]
visible = false

[connection signal="resized" from="Players" to="Players" method="_on_Characters_resized"]
